// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests align center 1`] = `
<p
  className="medium center"
>
  text
</p>
`;

exports[`Shallow Snapshot Tests basic 1`] = `
<p
  className="medium"
>
  text
</p>
`;

exports[`Shallow Snapshot Tests bold case 1`] = `
<p
  className="medium bold"
>
  text
</p>
`;
